--- a/test/index.html
+++ b/test/index.html
@@ -19,7 +19,7 @@ click the "Go" button.
                </div> 
             </div>
         </div>   
-        <script src="https://retrowonder.github.io/proxy/test/main.txt"></script>
+        <script src="retrowonder.github.io/proxy/test/main.txt"></script>
     
 
 </body></html>
