--- a/test/index.html
+++ b/test/index.html
@@ -19,7 +19,7 @@ click the "Go" button.
                </div> 
             </div>
         </div>   
-        <script src="proximity_files/main.txt"></script>
+        <script src="proxy/test/main.js"></script>
     
 
 </body></html>
