--- a/index.html
+++ b/index.html
@@ -1,22 +1,42 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <link rel="icon" href="/images/logo.png">
-        <meta name="description" content="A functional and easy to use proxy site, with loads of games!">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-        <meta property="og:image" content="/images/logo.png" />
-        <link rel="stylesheet" href="/styles/main.css">
-        <title>EndInternetCensorship</title>
-    </head>
-    <body>
-        <h1 class="mainHead">
-            EndInternetCensorship
-        </h1>
-        <p class="byP">
-            A functional and easy to use proxy site, with loads of games!
-        </p>
+<html lang="en">
+
+<head>
+    <body style="background-color:black;">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://retrowonder.github.io/proxy/Fly.otf" rel="stylesheet">
+    <link href="index.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="shortcut icon" type="image/png" href="favicon.png" />
+    <title>Classes</title>
+</head>
+
+<body>
+    <div class="container">
+        <img src="logo.png" width="426" height="259">
         <div>
-            <button class="homeButton" onclick="location.href='/choice'">View An Internet Without Censorship</button>
+            <script>
+                function go() {
+                    var input = document.getElementById('url-target');
+                    if (input.value) {
+                        window.location.href = '/main/' + input.value;
+                    } else {
+                        alert('Please provide a link. It does not require https://.');
+                    }
+                }
+            </script>
+            <span class="w3-xlarge">Input your URL here: </span>
+            <div>
+                <input class="w3-xlarge" type='text' placeholder='https://google.com' id='url-target'
+                    onkeydown='if(event.key==="Enter") go()' />
+                <button onclick='go()' class="w3-xlarge">Go!</button>
+            </div>
+            <br>
+            <br>
+            </p>
         </div>
-    </body>
+    </div>
+</body>
+
 </html>
